--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YSJF - 优化导航栏</title>
+    <title>Hi</title>
     <style>
         :root {
             --primary-color: #ff0000;
@@ -778,8 +778,8 @@
             <div class="slider-container" id="sliderContainer">
                 <div class="slider" id="slider">
                     <div class="slide"><img src="https://public.ysjf.com/content/title-image/5Elh4Ili.jpg" alt="Slide 3"></div>
-                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/sms23MG5.jpg" alt="Slide 2"></div>
-                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/EIg7lgx6.jpg" alt="Slide 1"></div>
+                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/%E5%8A%A8%E7%89%A9-%E9%98%BF%E8%A5%BF%E9%87%8C%E8%A5%BF%E5%A4%A7%E8%8D%89%E5%8E%9F8-%E7%89%B9%E5%86%99.jpg" alt="Slide 2"></div>
+                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/WlZNcHNl2jR.jpg" alt="Slide 1"></div>
                 </div>
                 <div class="slider-dots">
                     <div class="slider-dot active" data-index="0"></div>
@@ -841,7 +841,7 @@
                 <div class="content-card">
                     <img src="https://public.ysjf.com/content/title-image/1Olprx9D.jpg" alt="Image 5" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">螃蟹在进食（近景）</h3>
+                        <h3 class="card-title">螃蟹在进食</h3>
                         <div class="card-meta">
                             <span>摄影艺术</span>
                             <span>5.6万观看</span>
@@ -861,7 +861,7 @@
                 <div class="content-card">
                     <img src="https://public.ysjf.com/content/title-image/UNW9IGojyb-.jpg" alt="Image 7" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">厦门街头小憩的柯基</h3>
+                        <h3 class="card-title">小憩的柯基</h3>
                         <div class="card-meta">
                             <span>动物</span>
                             <span>4.1万观看</span>
@@ -911,7 +911,7 @@
                 <div class="content-card">
                     <img src="https://public.ysjf.com/content/title-image/UbJ0HBtl.jpg" alt="Image 12" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">盛开的荷花（近景）</h3>
+                        <h3 class="card-title">盛开的荷花</h3>
                         <div class="card-meta">
                             <span>自然风景</span>
                             <span>4.8万观看</span>
