--- a/index.html
+++ b/index.html
@@ -778,8 +778,8 @@
             <div class="slider-container" id="sliderContainer">
                 <div class="slider" id="slider">
                     <div class="slide"><img src="https://public.ysjf.com/content/title-image/5Elh4Ili.jpg" alt="Slide 3"></div>
-                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/%E5%8A%A8%E7%89%A9-%E9%98%BF%E8%A5%BF%E9%87%8C%E8%A5%BF%E5%A4%A7%E8%8D%89%E5%8E%9F8-%E7%89%B9%E5%86%99.jpg" alt="Slide 2"></div>
-                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/WlZNcHNl2jR.jpg" alt="Slide 1"></div>
+                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/YAGFCypC.jpg" alt="Slide 2"></div>
+                    <div class="slide"><img src="https://public.ysjf.com/content/title-image/2stZNZFu.jpg" alt="Slide 1"></div>
                 </div>
                 <div class="slider-dots">
                     <div class="slider-dot active" data-index="0"></div>
@@ -849,9 +849,9 @@
                     </div>
                 </div>
                 <div class="content-card">
-                    <img src="https://public.ysjf.com/mediastorm/material/material/%E5%9F%8E%E5%B8%82%E4%BA%BA%E6%96%87_%E8%8E%8E%E8%BD%A6_2_%E8%BF%91%E6%99%AF.jpg" alt="Image 6" class="card-image">
+                    <img src="https://public.ysjf.com/mediastorm/material/material/%E8%B4%B9%E5%B0%94%E7%8F%AD%E5%85%8B%E6%96%AF-05-%E8%BF%91%E6%99%AF-20250107.JPG" alt="Image 6" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">晨粥</h3>
+                        <h3 class="card-title">雪橇犬</h3>
                         <div class="card-meta">
                             <span>生活</span>
                             <span>2.3万观看</span>
@@ -889,21 +889,21 @@
                     </div>
                 </div>
                 <div class="content-card">
-                    <img src="https://public.ysjf.com/content/title-image/%E4%BA%BA%E6%96%87-%E7%91%B6%E5%B1%B1%E5%8F%A4%E5%AF%A83-%E5%85%A8%E6%99%AF.jpg" alt="Image 10" class="card-image">
+                    <img src="https://public.ysjf.com/content/title-image/TRvrTnnp.jpg" alt="Image 10" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">瑶山古寨</h3>
+                        <h3 class="card-title">火箭发射</h3>
                         <div class="card-meta">
-                            <span>纪录片</span>
+                            <span>科技</span>
                             <span>3.9万观看</span>
                         </div>
                     </div>
                 </div>
                 <div class="content-card">
-                    <img src="https://public.ysjf.com/content/title-image/zfDeUnLW.jpg" alt="Image 11" class="card-image">
+                    <img src="https://public.ysjf.com/content/title-image/hAbEG4cC.jpg" alt="Image 11" class="card-image">
                     <div class="card-content">
-                        <h3 class="card-title">一只蝴蝶</h3>
+                        <h3 class="card-title">旅途</h3>
                         <div class="card-meta">
-                            <span>自然</span>
+                            <span>城市</span>
                             <span>5.3万观看</span>
                         </div>
                     </div>
