--- a/index.html
+++ b/index.html
@@ -670,14 +670,14 @@
                 </div>
             </div>
             <div class="sidebar-section">
-                <div class="sidebar-section-title">设置</div>
+                <div class="sidebar-section-title">帮助</div>
                 <div class="sidebar-item theme-toggle-item" id="sidebarThemeToggle">
                     <div class="sidebar-item-icon">
                         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
                             <path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
                         </svg>
                     </div>
-                    <div class="sidebar-item-text">设置</div>
+                    <div class="sidebar-item-text">切换主题</div>
                 </div>
                 <div class="sidebar-item contact-toggle">
                     <div class="sidebar-item-icon">
@@ -983,13 +983,24 @@
         let touchStartX = 0;
         let touchEndX = 0;
 
-        // Initialize theme
-        if (localStorage.getItem('theme') === 'light') {
-            body.classList.add('light-theme');
-            themeToggle.querySelector('img').src = themeIcons.light;
-        } else {
-            themeToggle.querySelector('img').src = themeIcons.dark;
+        // 根据时间自动设置主题
+        function setThemeByTime() {
+            const now = new Date();
+            const hours = now.getHours();
+            // 5:00-24:00为白天主题，其他时间为夜晚主题
+            if (hours >= 5 && hours <= 23) {
+                body.classList.add('light-theme');
+                themeToggle.querySelector('img').src = themeIcons.light;
+                localStorage.setItem('theme', 'light');
+            } else {
+                body.classList.remove('light-theme');
+                themeToggle.querySelector('img').src = themeIcons.dark;
+                localStorage.setItem('theme', 'dark');
+            }
         }
+
+        // Initialize theme
+        setThemeByTime();
 
         // Theme toggle
         function toggleTheme(element) {
