--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -673,8 +674,8 @@
                 <div class="sidebar-section-title">帮助</div>
                 <div class="sidebar-item theme-toggle-item" id="sidebarThemeToggle">
                     <div class="sidebar-item-icon">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                            <path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
+                        <svg class="lightning-icon" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
                         </svg>
                     </div>
                     <div class="sidebar-item-text">切换主题</div>
@@ -727,7 +728,7 @@
                             <path d="M157.9 144.8h295.3c30 2.9 22.8 55.1 22.8 88.9V395c0 35 6.7 78-16.8 87.9-15.3 6.5-56.5 1.9-76.3 1.9H226.3c-36.2 0-85.6 8.5-91.2-22.5v-295c4.1-11 11.2-18.9 22.8-22.5m40.7 66.5v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m355.8-66.5h295.3c12 4.4 20.3 12.5 22.8 26.4v287.3c-2.7 11.9-9 22.1-20.8 25.4-19.3 5.3-51.3 1-74.3 1H625.7c-22.9 0-56.8 4.8-75.3-1-26.2-8.1-18.8-58.5-18.8-93.8V239.6c0-40.7-9.1-89.1 22.8-94.8m40.6 66.5v210.1h213.1v-213H596c-1.2 0.1-1.1 1.5-1 2.9m-299.3 61.5c29.7-5.5 53 14.2 53.5 41 0.7 35.3-35.9 54.7-64.4 40.1-32.6-16.7-30.4-73.4 10.9-81.1m396.4 0c69.9-12.9 68.6 96.3 0 85-43.6-7.1-45-76.7 0-85M451.3 881.6H158.9c-12.1-3.7-20.3-11.2-23.8-23.5V564c2.9-8.6 9.5-18.6 19.8-21.5 19.4-5.4 51.1-1 74.3-1h151.6c22.4 0 55-4.9 75.3 1 27.5 8 19.8 57.6 19.8 92.8v155.4c0.2 38 8.5 87.5-24.6 90.9M198.6 608v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m673.9-40.1V650c-2.3 27.7-0.3 59.6-1 88.9H660.4V691c-19.8-2.3-43.9-0.3-65.4-1-2.3 61.9-0.3 128-1 191.5h-38.7c-33.2-6.6-23.8-55.7-23.8-94.8V635.4c0-22.8-4.7-56.9 1-75.2 6.8-21.9 36.1-18.6 65.4-18.6h143.7v130H808c0.7-43-1.3-88.6 1-130 32-1.9 61.6-1.4 63.5 26.3M300.7 668.6c31.7-3.5 57.9 26.6 45.6 59.6-17 45.8-98.5 28.6-83.2-29.3 4.1-16 16.3-28 37.6-30.3m431.1 213h-71.4c0.7-25.1-1.3-52.8 1-76.2h70.4v76.2m140.7-76.2v49.8c-2.8 13.9-11 22.4-23.8 26.4h-50.5c0.7-25.1-1.3-52.8 1-76.2h73.3" fill="#3259CE" p-id="39062"></path>
                         </svg>
                     </div>
-                    <div class="sidebar-item-text">二维码</div>
+                    <div class="sidebar-item-text">二B码</div>
                 </div>
             </div>
             <div class="sidebar-section">
