--- a/index.html
+++ b/index.html
@@ -813,38 +813,30 @@
                 <div class="sidebar-section-title">通讯</div>
                 <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <path d="M22 6l-10 7L2 6"></path>
-                        </svg>
+                        <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.335 13.127a.322.322 0 00-.118.366l.217.814c.01.038.026.077.026.118a.161.161 0 01-.16.16.183.183 0 01-.094-.03l-1.054-.611a.486.486 0 00-.398-.053 5.675 5.675 0 01-1.573.221c-2.662 0-4.82-1.807-4.82-4.035 0-2.23 2.158-4.036 4.82-4.036 2.661 0 4.819 1.807 4.819 4.036 0 1.216-.649 2.31-1.665 3.05zM5.783 1.586c2.885 0 5.276 1.77 5.712 4.083a6.234 6.234 0 00-.314-.009c-2.913 0-5.274 1.978-5.274 4.417 0 .411.068.809.194 1.187a6.807 6.807 0 01-2.205-.258.577.577 0 00-.478.063l-1.266.735a.216.216 0 01-.111.036.193.193 0 01-.193-.194c0-.048.019-.096.031-.142l.26-.976a.388.388 0 00-.141-.44C.778 9.202 0 7.889 0 6.429c0-2.674 2.589-4.842 5.783-4.842zM9.574 9.39c.333 0 .602-.27.602-.605a.603.603 0 00-.602-.604.603.603 0 00-.601.604c0 .334.269.605.601.605zm3.213 0c.333 0 .602-.27.602-.605a.603.603 0 00-.602-.604.603.603 0 00-.601.604c0 .334.27.605.601.605zM3.856 5.566a.685.685 0 00.683-.687.685.685 0 00-.683-.687.685.685 0 00-.684.687c0 .38.306.687.684.687zm3.855 0a.685.685 0 00.684-.687.685.685 0 00-.684-.687.685.685 0 00-.684.687c0 .38.306.687.684.687z" fill="#07C160"/></svg>
                     </div>
-                    <div class="sidebar-item-text">微信：yaliuz</div>
+                    <div class="sidebar-item-text">E-Chat：yaliuz</div>
                 </div>
                 <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <path d="M22 6l-10 7L2 6"></path>
+                        <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" 
+                                  d="M14 3H2C1.44772 3 1 3.44772 1 4V12C1 12.5523 1.44772 13 2 13H14C14.5523 13 15 12.5523 15 12V4C15 3.44772 14.5523 3 14 3ZM2 4H14V4.5L8 8.5L2 4.5V4ZM2 12V6.5L8 10.5L14 6.5V12H2Z" 
+                                  fill="#07C160"/>
                         </svg>
                     </div>
-                    <div class="sidebar-item-text">邮箱：yaliuz@qq.com</div>
+                    <div class="sidebar-item-text">E-mail：yaliuz@qq.com</div>
                 </div>
+              
                 <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <path d="M22 6l-10 7L2 6"></path>
-                        </svg>
+                        <svg t="1746266022476" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2019/xlink"
+                        p-id="39061" width="16" height="16">
+                        <path d="M157.9 144.8h295.3c30 2.9 22.8 55.1 22.8 88.9V395c0 35 6.7 78-16.8 87.9-15.3 6.5-56.5 1.9-76.3 1.9H226.3c-36.2 0-85.6 8.5-91.2-22.5v-295c4.1-11 11.2-18.9 22.8-22.5m40.7 66.5v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m355.8-66.5h295.3c12 4.4 20.3 12.5 22.8 26.4v287.3c-2.7 11.9-9 22.1-20.8 25.4-19.3 5.3-51.3 1-74.3 1H625.7c-22.9 0-56.8 4.8-75.3-1-26.2-8.1-18.8-58.5-18.8-93.8V239.6c0-40.7-9.1-89.1 22.8-94.8m40.6 66.5v210.1h213.1v-213H596c-1.2 0.1-1.1 1.5-1 2.9m-299.3 61.5c29.7-5.5 53 14.2 53.5 41 0.7 35.3-35.9 54.7-64.4 40.1-32.6-16.7-30.4-73.4 10.9-81.1m396.4 0c69.9-12.9 68.6 96.3 0 85-43.6-7.1-45-76.7 0-85M451.3 881.6H158.9c-12.1-3.7-20.3-11.2-23.8-23.5V564c2.9-8.6 9.5-18.6 19.8-21.5 19.4-5.4 51.1-1 74.3-1h151.6c22.4 0 55-4.9 75.3 1 27.5 8 19.8 57.6 19.8 92.8v155.4c0.2 38 8.5 87.5-24.6 90.9M198.6 608v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m673.9-40.1V650c-2.3 27.7-0.3 59.6-1 88.9H660.4V691c-19.8-2.3-43.9-0.3-65.4-1-2.3 61.9-0.3 128-1 191.5h-38.7c-33.2-6.6-23.8-55.7-23.8-94.8V635.4c0-22.8-4.7-56.9 1-75.2 6.8-21.9 36.1-18.6 65.4-18.6h143.7v130H808c0.7-43-1.3-88.6 1-130 32-1.9 61.6-1.4 63.5 26.3M300.7 668.6c31.7-3.5 57.9 26.6 45.6 59.6-17 45.8-98.5 28.6-83.2-29.3 4.1-16 16.3-28 37.6-30.3m431.1 213h-71.4c0.7-25.1-1.3-52.8 1-76.2h70.4v76.2m140.7-76.2v49.8c-2.8 13.9-11 22.4-23.8 26.4h-50.5c0.7-25.1-1.3-52.8 1-76.2h73.3"
+                          fill="#07C160" p-id="39062"></path>
+                      </svg>
                     </div>
-                    <div class="sidebar-item-text">QQ：42626139</div>
-                </div>
-                <div class="sidebar-item">
-                    <div class="sidebar-item-icon">
-                        <svg t="1746266022476" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="39061" width="24" height="24">
-                            <path d="M157.9 144.8h295.3c30 2.9 22.8 55.1 22.8 88.9V395c0 35 6.7 78-16.8 87.9-15.3 6.5-56.5 1.9-76.3 1.9H226.3c-36.2 0-85.6 8.5-91.2-22.5v-295c4.1-11 11.2-18.9 22.8-22.5m40.7 66.5v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m355.8-66.5h295.3c12 4.4 20.3 12.5 22.8 26.4v287.3c-2.7 11.9-9 22.1-20.8 25.4-19.3 5.3-51.3 1-74.3 1H625.7c-22.9 0-56.8 4.8-75.3-1-26.2-8.1-18.8-58.5-18.8-93.8V239.6c0-40.7-9.1-89.1 22.8-94.8m40.6 66.5v210.1h213.1v-213H596c-1.2 0.1-1.1 1.5-1 2.9m-299.3 61.5c29.7-5.5 53 14.2 53.5 41 0.7 35.3-35.9 54.7-64.4 40.1-32.6-16.7-30.4-73.4 10.9-81.1m396.4 0c69.9-12.9 68.6 96.3 0 85-43.6-7.1-45-76.7 0-85M451.3 881.6H158.9c-12.1-3.7-20.3-11.2-23.8-23.5V564c2.9-8.6 9.5-18.6 19.8-21.5 19.4-5.4 51.1-1 74.3-1h151.6c22.4 0 55-4.9 75.3 1 27.5 8 19.8 57.6 19.8 92.8v155.4c0.2 38 8.5 87.5-24.6 90.9M198.6 608v210.1h213.1v-213H199.6c-1.2 0.1-1.1 1.5-1 2.9m673.9-40.1V650c-2.3 27.7-0.3 59.6-1 88.9H660.4V691c-19.8-2.3-43.9-0.3-65.4-1-2.3 61.9-0.3 128-1 191.5h-38.7c-33.2-6.6-23.8-55.7-23.8-94.8V635.4c0-22.8-4.7-56.9 1-75.2 6.8-21.9 36.1-18.6 65.4-18.6h143.7v130H808c0.7-43-1.3-88.6 1-130 32-1.9 61.6-1.4 63.5 26.3M300.7 668.6c31.7-3.5 57.9 26.6 45.6 59.6-17 45.8-98.5 28.6-83.2-29.3 4.1-16 16.3-28 37.6-30.3m431.1 213h-71.4c0.7-25.1-1.3-52.8 1-76.2h70.4v76.2m140.7-76.2v49.8c-2.8 13.9-11 22.4-23.8 26.4h-50.5c0.7-25.1-1.3-52.8 1-76.2h73.3" fill="#3259CE" p-id="39062"></path>
-                        </svg>
-                    </div>
-                    <div class="sidebar-item-text">二B码</div>
+                    <div class="sidebar-item-text">QR code</div>
                 </div>
             </div>
             <div class="sidebar-section">
